# Dice-Link-App

./: .gitignore  ARCHITECTURE-OLD.md  ARCHITECTURE.md  README.md  REFACTORING_COMPLETE.md  SPEC.md  dice-link-app-prompt.md
scripts/dice-link/: DICE_STATS_DESIGN.md  MOTION_DETECTION_DATA.md  PANELS_REFERENCE.html  POTENTIAL_DEAD_CODE.md  app.py  bridge_state.py  build_exe.py  config.py  custom_window.py  debug.py  debug_drag.py  dialogs.py  dla_bridge.py  main.py  pyproject.toml  requirements.txt  server.py  startup_dialog.py  state.py  upnp.py  vtt_validator.py  vtt_web.py  vtt_windows.py  window_controller.py
scripts/dice-link/app/: __init__.py  camera.py  server.py  websocket_handler.py
scripts/dice-link/core/: __init__.py  camera.py  inference.py  storage.py  websocket_handler.py
scripts/dice-link/docs/: CODE_ORGANIZATION_TODO.md  DICE_ISOLATION_RESEARCH.md  DLA-MIGRATION-PLAN.md  DLC-COLOR-PALETTE.md  STARTUP_DIALOG_PLAN.md  architecture-decision-embedded-vs-bridge.md  webrtc-implementation-guide.md  webrtc-sdp-reference.md
scripts/dice-link/templates/: _title_bar.html  index.html  settings.html  startup.html
scripts/dice-link/tests/: cef-embedded-browser-test.py  embedded-browser-test.py  pyqt6-embedded-browser-test.py  pyqt6-test10-window-open-ref.py  pyqt6-test2-secure-origin.py  pyqt6-test3-webchannel-bridge.py  pyqt6-test7-popouts-and-validation.py  pyqt6-test8-dlc-bridge-communication.py  pyqt6-test8-external-navigation-block.py  pyqt6-test9-popouts-working.py  test-page.html  webrtc-diagnostic.html  webrtc-sdp-capture.html  webrtc-test-dla.py  (+3 more)
(+23 files in other folders)
